--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </tr>
     </table>
     <hr>
-    <a href="myhobbies.html">My Hobbies</a>
-    <a href="contactme.html">Contact Me</a>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
 </body>
 </html>
